Se crea estado para manejar input trx

--- a/src/components/comandSection/comand/Comand.css
+++ b/src/components/comandSection/comand/Comand.css
@@ -4,6 +4,9 @@
 .blue{
     background-color: lightblue;
 }
+.green{
+    background-color: lightgreen;
+}
 .comandContainer{
     display: flex;
     justify-content:space-around;
