Se agregan eventos para resto de inputs con su comandos correspondientes

--- a/src/components/comandSection/comand/Comand.css
+++ b/src/components/comandSection/comand/Comand.css
@@ -7,6 +7,9 @@
 .green{
     background-color: lightgreen;
 }
+.red{
+    background-color: lightcoral;
+}
 .comandContainer{
     display: flex;
     justify-content:space-around;
