--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,16 @@
 }
 
 a {
-  font-weight: 500;
   color: white;
   text-decoration: inherit;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  cursor: pointer;
+  transition: border-color 0.25s;
 }
 
 body {
@@ -45,6 +52,9 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
+  border-color: #646cff;
+}
+a:hover{
   border-color: #646cff;
 }
 button:focus,
